--- a/Robot Framework/report.html
+++ b/Robot Framework/report.html
@@ -1567,22 +1567,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,18118],[],[[4,0,1,0,[],[1,94,10594],[]],[5,0,1,0,[],[1,10690,7426],[]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[1,0,92268],[],[[4,0,1,0,[],[1,129,10490],[]],[5,0,1,0,[],[1,10621,25745],[]],[6,0,1,0,[],[1,36367,55899],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\jongzazaal\\Desktop\\soa_group6\\Robot Framework\\Test.txt","*Test.txt","*0_Open Website","*1_Login Website"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\jongzazaal\\Desktop\\soa_group6\\Robot Framework\\Test.txt","*Test.txt","*0_Open Website","*1_Login Logout Website","*2_New Document"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Test","name":"Test","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:01:32","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:01:32","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:01:32","fail":0,"id":"s1","label":"Test","name":"Test","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1494221818638;
+window.output["baseMillis"] = 1494264106542;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 18138;
+window.output["generated"] = 92295;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
